# ncglm

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  README.md  config.h.cmake.in  configure.ac  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  glm__event_8c.html  glm__event_8c__incl.map  glm__event_8c__incl.md5  glm__flash_8c.html  glm__flash_8c__incl.map  glm__flash_8c__incl.md5  glm__group_8c.html  glm__group_8c__incl.map  glm__group_8c__incl.md5  glm__read_8c.html  glm__read_8c__incl.map  glm__read_8c__incl.md5  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  make.sh  menudata.js  test-driver-verbose
.github/workflows/: github-actions.yml
cmake/: Makefile.am
fsrc/: Makefile.am  ncglm.F90
ftest/: Makefile.am  ftst_glm_read.F90
include/: CMakeLists.txt  Makefile.am  glm_data.h  goes_glm.h  ncglm.h
psrc/: Makefile.am  _glm_group_so  glm.i  glm.py  glm_wrap.c  make.sh  ncglm.py  ncglm.py.in  nclgm.py.in
psrc/Attempt1/: glm.py  glm_wrap.c
psrc/Makefiles/: event_Makefile  flash_Makefile  group_Makefile  read_Makefile
ptest/: Makefile.am  ptst.py  ptst_glm_read.py
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  defines_0.js  defines_3.js  files_0.js  functions_0.js  pages_0.js  searchdata.js
src/: CMakeLists.txt  Makefile.am  glm_event.c  glm_event_make  glm_flash.c  glm_group.c  glm_read.c  goes_glm.h
test/: CMakeLists.txt  Makefile.am  OR_GLM-L2-LCFA_G17_s20192692359400_e20192700000000_c20192700000028.nc  run_glm_tests.sh  tst_event.c  tst_events.c  tst_flash.c  tst_glm_read.c  tst_glm_read_arrays.c  tst_group.c  un_test.h
