# This is the cmake file for the include directory of the ncglm library.

# Ed Hartnett 11/16/19
# INSTALL(FILES ${netCDF_SOURCE_DIR}/include/glm_data.h
#   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
#   COMPONENT headers)
# INSTALL(FILES ${netCDF_SOURCE_DIR}/include/goes_glm.h
#   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
#   COMPONENT headers)
